# homecast

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  COLLECTIONS_PLAN.md  CONTRIBUTING.md  PROTOCOL.md  README.md  package-lock.json
app-android-windows-linux/src-tauri/: Cargo.toml  Info.ios.plist  tauri.android.conf.json  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json
app-android-windows-linux/src-tauri/capabilities/: remote.json
app-android-windows-linux/src-tauri/icons/: icon.icns
app-android-windows-linux/src-tauri/src/: lib.rs  main.rs
server/: .env.example  .gitignore  Dockerfile  cloudbuild.yaml  pyproject.toml
server/homecast/: app.py  auth.py  config.py  home_app.py  homes_app.py  mcp_base.py  middleware.py
server/homecast/api/: api.py  home.py  homes.py  visibility.py
server/homecast/mcp/: handler.py
server/homecast/models/db/: database.py  models.py
server/homecast/models/db/repositories/: __init__.py  admin_repository.py  base_repository.py  collection_repository.py  device_repository.py  session_repository.py  (+4 more)
server/homecast/utils/: __init__.py  share_hash.py  system_logger.py
server/homecast/websocket/: handler.py  pubsub_router.py  redis_router.py  web_clients.py
server/homekit_mcp/: app.py  auth.py  config.py  middleware.py
server/homekit_mcp/api/: admin.py  api.py  public.py
server/homekit_mcp/models/db/: database.py  models.py
server/homekit_mcp/websocket/: handler.py
server/tests/: e2e_perf_test.py  perf_test.py  sample_home.json  sample_home_output.json  test_home_api.py  test_home_app.py  test_mcp_handler.py
(+173 files in other folders)
